--- a/portfolio/src/Components/Navbar.css
+++ b/portfolio/src/Components/Navbar.css
@@ -1,10 +1,20 @@
 .navbar{
     display: inline-block;
-    background-color: grey;
+    background-color: rgb(91, 134, 255);
+    border-radius: 20px;  /* Rounded corners */
     width: 70%;
+    margin-top: 2%;
 }
 .navbar ul li{
+    color: white;
     display: inline-block; /* Displays the list items inline-block */
     margin-right: 20px;    /* Adds space between the items */
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    
+ 
+}
+.navbar ul li:hover{
+    background-color: rgb(150, 248, 255);
+    border-radius: 20px;  /* Rounded corners */
  
 }
