--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -2,12 +2,48 @@
   text-align: center;
 }
 main{
+  
   border-style: dashed;
-  border-color: black;
-  width: 70%;
+  border-color: rgb(0, 0, 0);
+  width: 100%;
+  height: 100%;
   align-items: center;
-  margin-top: 2%;
+
   display: inline-block;
+}
+h1{
+  color: #00487B;
+  font-size: large;
+}
+.introduction{
+  border: 5px solid rgb(8, 216, 94); /* For visual spacing*/
+  width: 100%;
+  display: inline-block;
+}
+.aboutMe{
+  border: 5px solid rgb(8, 216, 94); /* For visual spacing*/
+  width: 100%;
+  display: inline-block;
+  background-color: #F5F5F5;
+}
+.skill{
+  border: 5px solid rgb(8, 216, 94); /* For visual spacing*/
+  width: 100%;
+  display: inline-block;
+  background-color: #F5F5F5;
+}
+.skillLogos{
+  padding: 50px;
+  width: 100px; /* Adjust width as needed */
+  height: 100px; /* Maintain aspect ratio */
+}
+.captionContainer{
+  display: inline-block;
+}
+figcaption{
+  font-family: Georgia,;
+  color: #00487B;
+  font-weight: bold;
 }
 .App-logo {
   height: 40vmin;
