--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -25,7 +25,6 @@ h1{
   width: 43%;
 }
 .pfp{
-  border: #00487B solid;
   margin-top: 5%;
 }
 .nameAndTitle{
@@ -59,10 +58,22 @@ h1{
 }
 /*All about me css*/
 .aboutMe{
-
   width: 100%;
+  background-color:#F5F5F5 ;
   display: inline-block;
-  background-color: #F5F5F5;
+  align-items: center;
+  width: 100%;
+}
+.aboutMeContainer{
+  display: inline-block;
+  width: 55%;
+}
+.pfp2{
+  float: left;
+  padding-right: 30px;
+}
+p{
+  text-align: left;
 }
 /*All skills css*/
 .skill{
