--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -13,6 +13,7 @@ main{
 h1{
   color: #00487B;
   font-size: x-large;
+  text-shadow: 0px 3px 2px rgba(0, 0, 0, 0.274);
 }
 /*All CSS for introduction*/
 .introduction{
@@ -44,18 +45,28 @@ h1{
 }
 .name{
   color: #000000;
+  text-shadow: 0px 3px 2px rgba(0, 0, 0, 0.514);
   font-size: xx-large;
+}
+.name:hover{
+  text-decoration: underline;
 }
 .role{
   color: #757575;
 }
 .status{
   color: #000000;
+  text-shadow: 0px 3px 2px rgba(0, 0, 0, 0.514);
   font-size: x-large;
 }
 .uni{
   color: #000000;
+  text-shadow: 0px 3px 2px rgba(0, 0, 0, 0.514);
   font-size: x-large;
+}
+.locale{
+  text-shadow: 0px 3px 2px rgba(0, 0, 0, 0.26);
+  color: #757575;
 }
 .degree{
   color: #757575;
