--- a/portfolio/src/Components/Navbar.css
+++ b/portfolio/src/Components/Navbar.css
@@ -6,12 +6,14 @@
     z-index: 1000; /* Ensures the navbar stays on top of other content */
     position: sticky;
     width: 100%;
+    box-shadow: 0px 5px 5px rgba(219, 219, 219, 0.514);
 }
 .navbar ul li{
     display: inline-block; /* Displays the list items inline-block */
     margin-right: 100px;    /* Adds space between the items */
     font-size: x-large;
     padding: 5px;
+    
 }
 .navbar ul li a{
     color: white;
