--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -47,29 +47,46 @@ h1{
   color: #000000;
   text-shadow: 0px 3px 2px rgba(0, 0, 0, 0.514);
   font-size: xx-large;
+  animation: backInLeft; /* referring directly to the animation's @keyframe declaration */
+  animation-duration: 2s; /* don't forget to set a duration! */
 }
 .name:hover{
   text-decoration: underline;
 }
 .role{
   color: #757575;
+  animation: fadeIn; /* referring directly to the animation's @keyframe declaration */
+  animation-duration: 5s; /* don't forget to set a duration! */
+}
+.role2{
+  color: #757575;
+  animation: fadeIn; /* referring directly to the animation's @keyframe declaration */
+  animation-duration: 7s; /* don't forget to set a duration! */
 }
 .status{
   color: #000000;
   text-shadow: 0px 3px 2px rgba(0, 0, 0, 0.514);
   font-size: x-large;
+  animation: backInRight; /* referring directly to the animation's @keyframe declaration */
+  animation-duration: 2s; /* don't forget to set a duration! */
 }
 .uni{
   color: #000000;
   text-shadow: 0px 3px 2px rgba(0, 0, 0, 0.514);
   font-size: x-large;
+  animation: backInRight; /* referring directly to the animation's @keyframe declaration */
+  animation-duration: 2s; /* don't forget to set a duration! */
 }
 .locale{
   text-shadow: 0px 3px 2px rgba(0, 0, 0, 0.26);
   color: #757575;
+  animation: fadeIn; /* referring directly to the animation's @keyframe declaration */
+  animation-duration: 3s; /* don't forget to set a duration! */
 }
 .degree{
   color: #757575;
+  animation: fadeIn; /* referring directly to the animation's @keyframe declaration */
+  animation-duration: 7s; /* don't forget to set a duration! */
 }
 /*All about me css*/
 .aboutMe{
@@ -104,6 +121,14 @@ p{
   padding: 50px;
   width: 100px; /* Adjust width as needed */
   height: 100px; /* Maintain aspect ratio */
+  margin-bottom: 5px;
+}
+.skillLogos:hover{
+  padding: 50px;
+  width: 100px; /* Adjust width as needed */
+  height: 100px; /* Maintain aspect ratio */
+  animation: shakeY, flash; /* referring directly to the animation's @keyframe declaration */
+  animation-duration: 2s; /* don't forget to set a duration! */
 }
 .captionContainer{
   display: inline-block;
