--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -19,6 +19,8 @@ h1{
 .introduction{
   width: 100%;
   display: inline-block;
+  background-image: url('./assets/background.jpg');
+  background-size: 1000px;
 }
 .introduction-container{
   display: inline-block;
@@ -44,7 +46,7 @@ h1{
   margin-top: 25%;
 }
 .name{
-  color: #000000;
+  color: #ffffff;
   text-shadow: 0px 3px 2px rgba(0, 0, 0, 0.514);
   font-size: xx-large;
   animation: backInLeft; /* referring directly to the animation's @keyframe declaration */
@@ -54,54 +56,61 @@ h1{
   text-decoration: underline;
 }
 .role{
-  color: #757575;
+  color: #ffffff;
+  text-shadow: 0px 3px 2px rgb(0, 0, 0);
   animation: fadeIn; /* referring directly to the animation's @keyframe declaration */
   animation-duration: 5s; /* don't forget to set a duration! */
 }
 .role2{
-  color: #757575;
+  color: #ffffff;
+  text-shadow: 0px 3px 2px rgb(0, 0, 0);
+
   animation: fadeIn; /* referring directly to the animation's @keyframe declaration */
   animation-duration: 7s; /* don't forget to set a duration! */
 }
 .status{
-  color: #000000;
-  text-shadow: 0px 3px 2px rgba(0, 0, 0, 0.514);
+  color: #ffffff;
+  text-shadow: 0px 3px 2px rgb(0, 0, 0);
   font-size: x-large;
   animation: backInRight; /* referring directly to the animation's @keyframe declaration */
   animation-duration: 2s; /* don't forget to set a duration! */
 }
 .uni{
-  color: #000000;
-  text-shadow: 0px 3px 2px rgba(0, 0, 0, 0.514);
+  color: #e6e6e6;
+  text-shadow: 0px 3px 2px rgb(0, 0, 0);
   font-size: x-large;
   animation: backInRight; /* referring directly to the animation's @keyframe declaration */
   animation-duration: 2s; /* don't forget to set a duration! */
 }
 .locale{
-  text-shadow: 0px 3px 2px rgba(0, 0, 0, 0.26);
-  color: #757575;
+  text-shadow: 0px 3px 2px rgb(0, 0, 0);
+  color: #ffffff;
   animation: fadeIn; /* referring directly to the animation's @keyframe declaration */
   animation-duration: 3s; /* don't forget to set a duration! */
 }
 .degree{
-  color: #757575;
+  color: #ffffff;
+  text-shadow: 0px 3px 2px rgb(0, 0, 0);
   animation: fadeIn; /* referring directly to the animation's @keyframe declaration */
   animation-duration: 7s; /* don't forget to set a duration! */
 }
 /*All about me css*/
 .aboutMe{
   width: 100%;
-  background-color:#F5F5F5 ;
   display: inline-block;
   align-items: center;
-  width: 100%;
+
 }
 .aboutMeContainer{
   display: inline-block;
   width: 55%;
 }
 .pfp2{
-  margin-bottom: 20px;
+  margin-right: 30px;
+  width: 200px;
+  height: 250px;
+  box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.671);
+
 }
 p{
   text-align: left;
@@ -115,7 +124,7 @@ p{
 .skill{
   width: 100%;
   display: inline-block;
-  background-color: #F5F5F5;
+
 
 }
 .skillLogos{
