minor changes css

--- a/portfolio/src/Components/footnotes.css
+++ b/portfolio/src/Components/footnotes.css
@@ -9,7 +9,7 @@
 }
 .footnotes ul li{
     font-weight: bold;
-    font-family: Georgia,;
+    font-family: Impact,;
     letter-spacing: 0.5px;
     list-style-type: none;   
     text-decoration: none;
